fix: align items to center, this slider is winning, 1 for him, 0 for me

--- a/css/slider.css
+++ b/css/slider.css
@@ -5,9 +5,10 @@
 }
 
 .slides-container {
-    height: calc(60vh - 5rem);
+    height: calc(100vh - 5rem);
     width: 100%;
     display: flex;
+    align-items: center;
     list-style: none;
     margin: 0;
     padding: 0;
